# doxie-bot

./: .gitignore  404.html  Cargo.toml  README.md  index.html  main.css
.github/workflows/: gh-pages.yml
assets/dioxus/: ui.js  ui_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
data/: commits.json  open_prs.json
src/: main.rs  workflow.rs
types/: Cargo.toml
types/src/: git_results.rs  health.rs  lib.rs
