workspace = { members = ["types"] }
[package]
name = "doxie-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.1", features = ["web"] }
octocrab = "0.38.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
doxie-types = { path = "./types" }
git2 = "0.18.3"
regex = "1.10.4"
