[workspace]
resolver = "2"
members = [
    #
    "packages/types",
    "packages/ui",
    "packages/doxie",
]

[workspace.dependencies]
doxie-types = { path = "packages/types" }
octocrab = { git = "https://github.com/jkelleyrtp/octocrab", branch = "jk/split-out-types" }
octocrab-models = { git = "https://github.com/jkelleyrtp/octocrab", branch = "jk/split-out-types" }
